# SlicerPIRADS

./: CMakeLists.txt  LICENSE.txt  startSlicelet.sh
DICOMPlugins/: CMakeLists.txt  DICOMQIICRXGeneratorPlugin.py  DICOMQIICRXLoaderPlugin.py
Documentation/: Classes.puml  FormGenerator.puml  HangingProtocols.puml  LTZaApex.json  StudyAssessment.json  UseCases.puml  example.json
SlicerPIRADS/: CMakeLists.txt  SlicerPIRADS.py
SlicerPIRADS/Resources/: ProstateMRIAcquisitionTypes.json  default.cfg
SlicerPIRADS/Resources/Forms/: Clinical_Information.json  Imaging_Study_Information.json  Patient_Clinical_Information.json  Procedure_Information.json
SlicerPIRADS/Resources/UI/: AnnotationItemWidget.ui  AssessmentDialog.ui  AssessmentWidget.ui  DataSelectionDialog.ui  FindingInformationWidget.ui  FindingItemWidget.ui  FindingsWidget.ui  MeasurementToolSelectionDialog.ui  ProstateSectorMapDialog.ui  ProstateWidget.ui  StudyLevelAssessmentWidget.ui
SlicerPIRADS/SlicerPIRADSLogic/: Annotation.py  Configuration.py  Constants.py  Exception.py  Finding.py  HTMLReportCreator.py  HangingProtocol.py  JSONFormGenerator.py  LesionAssessmentRules.py  PIRADSAssessmentCategory.py  SeriesType.py
SlicerPIRADS/SlicerPIRADSWidgets/: AnnotationWidget.py  AssessmentDialog.py  AssessmentWidget.py  DataSelectionDialog.py  FindingsWidget.py  ProstateSectorMapDialog.py  ProstateWidget.py  StudyAssessmentWidget.py
Testing/: AssessmentLogicTests.py  AssessmentTests.py  CMakeLists.txt  FormGeneratorFactoryTests.py  JSONFormGeneratorTests.py  SlicerPIRADSTests.py  testForm.json  test_data.json  test_schema.json
docs/: Makefile  SlicerPIRADSLogic.rst  build.sh  conf.py  make.bat  modules.rst
docs/source/: SlicerPIRADS.rst  SlicerPIRADSLogic.rst  SlicerPIRADSWidgets.rst  conf.py  index.rst  modules.rst
